--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,8 @@
-<p>about works!</p>
+<div class="about">
+  <h1 class="title">Acerca de nosotros</h1>
+  <div class="content">
+    <p>Somos una empresa dedicada a proporcionar soluciones de alta calidad para todas sus necesidades. Con un equipo de profesionales altamente calificados, estamos comprometidos a superar las expectativas de nuestros clientes.</p>
+    <p>Con años de experiencia en la industria, tenemos la experiencia y la capacidad para proporcionar soluciones excepcionales para una variedad de necesidades.</p>
+  </div>
+</div>
+
