--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="home">
+  <h1 class="title">¡Bienvenido a mi sitio web!</h1>
+  <p class="welcome-text">Gracias por visitarnos. Aquí encontrarás todo lo que necesitas saber sobre nosotros.</p>
+</div>
