--- a/src/app/pages/form-persona/form-persona.component.html
+++ b/src/app/pages/form-persona/form-persona.component.html
@@ -1,13 +1,15 @@
-<label for="txtCedula">Cedula</label>
+<label for="txtCedula">Cédula:</label>
 <input id="txtCedula" [(ngModel)]="persona.cedula"/>
-<br>
-<label for="txtNombre">Nombre</label>
+<br/>
+<label for="txtNombre">Nombre:</label>
 <input id="txtNombre" [(ngModel)]="persona.nombre"/>
-<br>
-<label for="txtDireccion">Direccion</label>
+<br/>
+<label for="txtDireccion">Dirección:</label>
 <input id="txtDireccion" [(ngModel)]="persona.direccion"/>
-<br>
-<br>
+<br/>
+<br/>
 
 <button (click)="guardar()">Guardar</button>
-  
+
+
+
