--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,6 +4,8 @@
     <li><a routerLink="/">Inicio</a></li>
     <li><a routerLink="/about">Acerca de</a></li>
     <li><a routerLink="/contact">Contacto</a></li>
+    <li><a routerLink="/form-persona">Personas</a></li>
+    <li><a routerLink="/list-persona">Lista Personas</a></li>
   </ul>
 </nav>
 
